app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    background: url('./bg.png');
}

.calendly-inline-widget {
    padding: 0 !important;
    margin: 0 !important;
}

.logo::after {
    content: "PromoPulse";
    display: flex;
    transform: rotateX(180deg);
    background-image:
        linear-gradient(180deg, rgba(255, 255, 255, .0) 10%, rgba(255, 255, 255, .5));
    -webkit-background-clip: text;
    color: transparent;
}

.chevron-button {
    position: relative;
    animation: moveUpDown 0.5s infinite alternate;
    /* Adjust duration as needed */
}


.ribbon-right {
    position: absolute;
    clip-path: polygon(0 0, 100% 0%, 100% 76%, 100% 100%, 94% 77%, 0 77%, 10% 40%);

}

.ribbon-left {
    position: absolute;
    clip-path: polygon(100% 0%, 0 0, 0 76%, 0 100%, 6% 77%, 100% 77%, 90% 40%);

}

@keyframes moveUpDown {
    0% {
        transform: translateY(0);
    }

    100% {
        transform: translateY(-30px);
        /* Move up by 10px */
    }
}

